WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155816
Crash when using KVO from within -[WebView initWithCoder:]
https://bugs.webkit.org/show_bug.cgi?id=155816
Summary
Crash when using KVO from within -[WebView initWithCoder:]
Anders Carlsson
Reported
2016-03-23 15:56:33 PDT
Crash when using KVO from within -[WebView initWithCoder:]
Attachments
Patch
(10.03 KB, patch)
2016-03-23 16:33 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-03-23 16:33:37 PDT
Created
attachment 274792
[details]
Patch
Anders Carlsson
Comment 2
2016-03-23 16:47:34 PDT
Committed
r198604
: <
http://trac.webkit.org/changeset/198604
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug