Crash when using KVO from within -[WebView initWithCoder:] https://bugs.webkit.org/show_bug.cgi?id=155816 rdar://problem/17073265

Reviewed by Dan Bernstein.

Source/WebKit/mac:

Get rid of the observationInfo getter and setter. It's not clear why they were added (in 2003),
and the methods on NSObject are good enough for us.

* WebView/WebView.mm:
(-[WebView setObservationInfo:]): Deleted.
(-[WebView observationInfo]): Deleted.
* WebView/WebViewData.h:

Tools:

Add test.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/mac/EarlyKVOCrash.mm: Added.
(-[EarlyKVOCrashResponder initWithWebView:]):
(-[EarlyKVOCrashResponder initWithCoder:]):
(-[EarlyKVOCrashResponder dealloc]):
(-[EarlyKVOCrashResponder encodeWithCoder:]):
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/173919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198604 268f45cc-cd09-0410-ab3c-d52691b4dbfc